--- a/copy.html
+++ b/copy.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -85,9 +85,7 @@
         .photo-card {
             width: 200px;
             height: 250px;
-            /* Fixed height for uniformity */
             object-fit: cover;
-            /* Ensures image fills the box nicely */
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
@@ -191,9 +189,9 @@
             <h2 class="section-title text-center">Memories with Reena 🎉</h2>
             <p class="text-center">A beautiful collection of moments that make Reena's birthday even more special!</p>
             <div class="photo-gallery">
-                <img src="./assets/images/reena-1.png" alt="Photo 1" class="photo-card">
-                <img src="./assets/images/reena-4.png" alt="Photo 2" class="photo-card">
-                <img src="./assets/images/reena-13.png" alt="Photo 3" class="photo-card">
+                <img src="./assets/images/reena-1.webp" alt="Photo 1" class="photo-card">
+                <img src="./assets/images/reena-4.webp" alt="Photo 2" class="photo-card">
+                <img src="./assets/images/reena-13.webp" alt="Photo 3" class="photo-card">
             </div>
         </div>
     </section>
@@ -280,13 +278,24 @@
             <p>Click the button below to brighten Reena's day with your special message and virtual hugs! 💖</p>
             <button style="margin-top: 10px;" class="btn mt-3" onclick="showReenaPhoto()">Send Message 💌</button>
             <div id="reena-photo" style="display:none; margin-top: 20px;">
-                <img src="./assets/images/reena-1.png" alt="Reena"
+                <img src="./assets/images/reena-10.webp" alt="Reena"
                     style="max-width: 300px; border-radius: 15px; box-shadow: 0 4px 8px rgba(0,0,0,0.1);">
                 <p style="margin-top: 10px; font-size: 18px; font-weight: 500;">Here's a virtual hug from Reena's world!
                     🌟💌</p>
             </div>
         </div>
     </section>
+  
+    <section id="open-new-page" class="bg-light text-center">
+        <div class="container">
+            <h2 class="section-title">Enjoy More Fun 🎉</h2>
+            <p>Click the button below to discover more sections filled with joy and surprises!</p>
+            <a href="new-page.html">
+                <button class="btn mt-3">Go to New Page 🎁</button>
+            </a>
+        </div>
+    </section>
+
     <script>
         const items = document.querySelectorAll('.accordion-item');
         items.forEach(item => {
@@ -303,4 +312,4 @@
     </script>
 </body>
 
-</html>
+</html> -->
