--- a/index.html
+++ b/index.html
@@ -553,25 +553,32 @@
         <div class="container">
             <h2 class="section-title text-center">Why We Love Reena 💙</h2>
             <div class="accordion-container">
-                <div class="accordion-item active">
-                    <div class="accordion-title">🌟 Reena’s Magic</div>
-                    <div class="accordion-content">
-                        Reena has this magical aura that makes every day feel brighter. Her presence alone lights up any
-                        room she walks into! ✨💖
-                    </div>
+            <div class="accordion-item active">
+                <div class="accordion-title">😎 Reena the Chill Queen</div>
+                <div class="accordion-content">
+                    Jaise tu chill rhti h hr baat se hr cheej se bindaas kuch bhi bolti h or saari bkwas sun leti h
+                    hme tolerate krti h aise
+                    koi ni kr skta anu bhi nhi🤣
                 </div>
-                <div class="accordion-item">
-                    <div class="accordion-title">👑 Reena’s True Essence</div>
-                    <div class="accordion-content">
-                        Reena is pure elegance, a beautiful blend of grace and strength. She has this amazing ability to
-                        uplift everyone around her. 🌸💪
-                    </div>
+            </div>
+
+            <div class="accordion-item">
+                <div class="accordion-title">😂 Reena Priye Pdosn Kyun Hai?</div>
+                <div class="accordion-content">
+                    Naam naam ke cheeni ke pranthe bana ke khila deti hai — bina kisi shikayat ke, jaise ki world’s best chef ho
+                    sirf humare liye! 🫓😋<br><br>
+                    Aur jab koi extra smart banta hai, toh apni legendary 🧐 waali taka bhari jhaki se sabko seedha kar deti hai —
+                    bas ek nazar aur silence ho jaata hai pure area mein! 😤👀<br><br>
+                    Aise combinations sirf Reena mein hi milte hain — pranthe + power stare = Priye Pdosn for life! 💖
                 </div>
+            </div>
+
                 <div class="accordion-item">
-                    <div class="accordion-title">💙 How Reena Changes the Game</div>
+                <div class="accordion-title">Title ke liye shbd km rh gye 😵‍💫✍️ ab mjak na bnaio 😑😂</div>
                     <div class="accordion-content">
-                        With her creativity and heart of gold, Reena has the power to turn any situation into something
-                        extraordinary. ✨🎨
+                        Socha nahi tha kabhi... aise bhi koi mil jaayega 🤯💕<br>
+                        Jiske saath khushi 😄 aur gham 😢 dono ka connection ban jaayega...<br>
+                        Matlab emotional Wi-Fi mil gaya 📶❤️
                     </div>
                 </div>
             </div>
