--- a/photo-gallery.html
+++ b/photo-gallery.html
@@ -73,22 +73,50 @@
             object-fit: cover;
         }
 
-        .btn {
-            padding: 10px 25px;
-            background-color: rebeccapurple;
-            color: white;
-            font-size: 16px;
-            border: none;
-            border-radius: 25px;
-            cursor: pointer;
-            transition: background 0.3s;
-            display: block;
-            margin: 30px auto;
-        }
+     .btn {
+    padding: 10px 25px;
+    background-color: rebeccapurple;
+    color: white;
+    border: none;
+    font-size: 16px;
+    border-radius: 25px;
+    cursor: pointer;
+    transition: all 0.4s ease;
+    display: block;
+    margin: 30px auto;
+    position: relative;
+    overflow: hidden;
+     text-decoration: none;
+      overflow: hidden;
+        box-shadow: none;
+    border-bottom: none;
+    z-index: 1;
+}
 
-        .btn:hover {
-            background-color: #155cc2;
-        }
+.btn::before {
+    content: "";
+    position: absolute;
+     text-decoration: none;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: white;
+    z-index: -1;
+    transition: transform 0.4s ease;
+    transform: scaleX(0);
+    transform-origin: left;
+    border-radius: 25px;
+}
+
+.btn:hover::before {
+    transform: scaleX(1);
+}
+
+.btn:hover {
+    color: rebeccapurple;
+     text-decoration: none;
+}
 
         .thank-you {
             text-align: center;
