--- a/new-page.html
+++ b/new-page.html
@@ -137,21 +137,28 @@
         <div class="container">
             <h2 class="section-title text-center">More Memories with Reena 🌸</h2>
             <div class="message-cards">
-                <div class="message-card">"Every moment with you, Reena, is a moment worth cherishing forever!"</div>
-                <div class="message-card">"From the laughter to the hugs, every memory with you is special!"</div>
+                <div class="message-card">"Class me chupke aana... aur har baar pakde jana 😅 — golden memories with you,
+                    Reena!"</div>
+                <div class="message-card">"Cheeni ke pranthe ho ya pdosi prem 😋💕 — all of it still brings back the best
+                    memories!"</div>
             </div>
         </div>
     </section>
 
-    <section id="final-thoughts" class="bg-yellow-light">
-        <div class="container">
-            <h2 class="section-title text-center">Final Thoughts 💭</h2>
-            <div class="message-cards">
-                <div class="message-card">"Reena, you're a gift to this world. May your birthday be filled with joy,
-                    love, and everything you wish for!"</div>
-            </div>
+<section id="final-thoughts" class="bg-yellow-light">
+    <div class="container">
+        <h2 class="section-title text-center">prantha and pdosn prem 😂🤣😂</h2>
+        <div class="message-cards">
+            <div class="message-card">"Meri toh ek hi pdosn hai, Reena ji! Aur mujhe lagta hai ki kuch log, urf tu, hi
+                mujhe replace karke koi naye pdosi nahi banayenge 😏. Kyunki agar naye pdosi banaye toh unhe cheeni ke
+                pranthe bhi dene honge, jo share nahi ho sakte re baba! 😂🍞"</div>
+            <div class="message-card">"Aur yeh cheeni ke pranthe — woh toh kisi aur ke saath share karna bilkul
+                impossible hai! Share toh karte nahi, bcz pranthe toh phla pyar hai😂😆🍯!"</div>
         </div>
-    </section>
+    </div>
+</section>
+
+
 
     <section id="final-message" class="bg-sky text-center">
         <div class="container">
